static/style.css
html {
  background-color: #262223;
  color: #ddd;
  line-height: 1.5;
  font-family: sans-serif;
}

h1, .trait { 
  font-variant-caps: small-caps;
}

h1, h2, h3, .type {
  margin-block-end: -0.2em;
}
* {
  margin-block-start: 0;
}
p {
  text-align: justify;
  margin-block-end: 0.5em;
}

#content {
  padding: 0 5%;
  margin: 0 auto;
  max-width: 1280px;
}

.header {
  text-align: center;
  font-size: 130%;
  display: flex;
  flex-wrap: nowrap;
  width: 100%;
}

.header > span > a > div {
  padding: 0.5em;
}

.header > span {
  flex-grow: 1;
}

.header > span :hover {
  background-color: #131111;
  transition-duration: 200ms;
}

.traits, .header {
  overflow-x: auto;
  overflow-y: hidden;
}

.traits {
  margin-bottom: 0.5em;
  /* without this, it clips on mobile */
  padding: 0.1em 0;
}

.traits-inline {
  font-size: 70%;
  vertical-align: text-top;
}

.trait {
  border: 0.2rem solid #d8c384;
  background: #5d0000;
  color: white;
  padding: 0.15rem 0.5rem 0.1rem 0.5rem;
  margin-right: -0.2em;
  font-weight: 700;
}

.trait .trait-size {
  background-color: #3b7b59;
}

.trait .trait-alignment {
  background-color: #576293;
}

.type {
  float: right;
}

.rarity-rare {
  background-color: #002664;
}

.rarity-uncommon {
  background-color: #98513d;
}

.rarity-unique {
  background-color: #45166e;
}

a {
  color: #edad2f;
}

/* foundry stuff */
a.inline-roll {
  color: inherit;
}
[data-formula="1d20"], .fas {
  display: none;
}

.actionimage {
  vertical-align: middle;
  height: 0.8em;
}

#gridlist {
  display: flex;
  flex-flow: wrap;
  justify-content: space-between;
}

#gridlist > span {
  min-width: 25em;
  max-width: 20%;
  overflow: hidden;
  padding: 0.1em;
  text-overflow: ellipsis;
  white-space: nowrap;
}

#gridlist a, h2 a, .header > span > a {
  text-decoration: none;
}

#gridlist a:hover, h2 a:hover {
  text-decoration: underline;
}

#list > p {
  margin-bottom: 0.2em;
}

h1 > a {
  color: inherit;
  text-decoration: none;
}

table {
  border-collapse: collapse;
}
table.overview {
  width: 100%;
}
td {
  border: 1px #ddd solid;
  text-align: right;
  padding: 0.2em 0.5em;
}
td:first-child {
  text-align: left;
}

@media (prefers-color-scheme: light) {
  html {
    background: #f0edea;
    color: black;
  }
  a {
    color: #5d0000;
  }
  .header > span :hover {
    background-color: #b2a9a4;
  }
  .actionimage {
    filter: invert(1);
  }
  td {
    border: 1px black solid;
  }
}

